<resources>
    <string name="app_name">NerdUp</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="editProfile">Edit</string>
    <string name="logout">Logout</string>
    <string name="uploadPic">Upload Picture</string>
    <string name="takePic">Take Picture</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="accountCreateLink">No account yet? Click Here</string>
    <string name="accountLoginLink">Already have an account? Click Here</string>
    <string name="passwordMatch">Retype Password</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="createAccount">Create Account</string>
    <string name="bio">Bio</string>
    <string name="quickInfo">Quick Info</string>
    <string name="mains">Mains</string>
    <string name="secondaries">Secondaries</string>
    <string name="notes">Notes</string>
    <string name="editEmail">Change Email</string>
    <string name="editPassword">Change Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="currentPassword">Current Password</string>
    <string name="newEmail">New Email</string>
    <string name="newPassword">New Password</string>
    <string name="title_activity_password_reset">PasswordReset</string>
    <string name="sendEmail">Send Email</string>
    <string name="forgotPassword">Forgot Password? Click Here</string>
    <string name="currentEmail">Current Email</string>
    <string name="searchHint">Start Typing Username...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
